[package]

name = "nickel_postgres"
version = "0.0.0"
authors = [
    "bguiz"
]

[dependencies.nickel]

git = "https://github.com/nickel-org/nickel.rs.git"

[dependencies]
postgres = "*"
r2d2 = "*"
r2d2_postgres = "*"
plugin = "*"
typemap = "*"
openssl = "*"

[dependencies.nickel_macros]

git = "https://github.com/nickel-org/nickel.rs.git"
