[package]

name = "nickel_postgres"
version = "0.2.0"
authors = [
    "bguiz"
]

description = "Postgres middleware for nickel.rs"
license = "MIT"

repository = "https://github.com/nickel-org/nickel-postgres"
readme = "README.md"
keywords = ["nickel", "postgres", "database", "web"]

[dependencies]
nickel = "0.8.1"
r2d2 = "0.7.0"
r2d2_postgres = "0.10.1"
typemap = "0.3.3"
plugin = "0.2.6"
